--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "solidity-coverage": "0.7.17",
     "ts-generator": "0.1.1",
     "ts-node": "10.4.0",
-    "typechain": "6.0.5",
+    "typechain": "^6.0.5",
     "typescript": "4.5.2"
   },
   "husky": {
